put loom test in subprocess.